--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "<appName>",
-  "version": "0.0.1",
+  "name": "express-boilerplate",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "dev": "webpack -d --watch --display-error-details",
+    "build": "webpack -p"
   },
   "dependencies": {
+    "app-root-path": "^1.0.0",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "connect-redis": "^3.0.2",
     "cookie-parser": "^1.3.3",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "glob": "^5.0.3",
@@ -19,23 +22,24 @@
     "morgan": "^1.6.1",
     "mysql": "^2.8.0",
     "passport": "^0.3.2",
-    "passport-windowsauth": "^1.0.0",
+    "passport-windowsauth": "^0.5.0",
+    "react": "^15.0.2",
+    "react-bootstrap": "^0.29.4",
+    "react-dom": "^15.0.2",
     "sequelize": "^3.5.1",
     "serve-favicon": "^2.3.0",
     "useragent": "^2.1.8"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-handlebars": "^0.11.0",
-    "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-jshint": "^0.12.0",
-    "grunt-contrib-uglify": "^0.11.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-develop": "^0.4.0",
-    "grunt-notify": "^0.4.3",
-    "load-grunt-tasks": "^3.2.0",
-    "request": "^2.60.0",
-    "time-grunt": "^1.2.1"
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "es6-promise": "^3.1.2",
+    "eslint": "^2.9.0",
+    "exports-loader": "^0.6.3",
+    "imports-loader": "^0.6.5",
+    "webpack": "^1.13.0",
+    "webpack-notifier": "^1.3.0"
   }
 }
