--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^15.0.2",
     "sequelize": "^3.5.1",
     "serve-favicon": "^2.3.0",
-    "useragent": "^2.1.8"
+    "useragent": "^2.1.8",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
