--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
+    "express-validator": "^2.20.8",
     "glob": "^5.0.3",
     "helmet": "^1.3.0",
     "jade": "^1.11.0",
