--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "webpack -d --watch --display-error-details",
-    "build": "webpack -p"
+    "dev": "cross-env NODE_ENV=development webpack -d --watch --display-error-details",
+    "build": "cross-env NODE_ENV=production webpack -p"
   },
   "dependencies": {
     "app-root-path": "^1.0.0",
@@ -12,6 +12,7 @@
     "compression": "^1.5.2",
     "connect-redis": "^3.0.2",
     "cookie-parser": "^1.3.3",
+    "cross-env": "^3.0.0",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
@@ -37,10 +38,14 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.16.0",
+    "css-loader": "^0.25.0",
     "es6-promise": "^3.1.2",
-    "eslint": "^2.9.0",
     "exports-loader": "^0.6.3",
+    "file-loader": "^0.9.0",
     "imports-loader": "^0.6.5",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-notifier": "^1.3.0"
   }
